# commerce-kit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
program/: .gitignore  CLAUDE.md  Cargo.toml  FUTURE_WORK.md  Makefile  README.md  generate_profiling.py  package.json
program/clients/rust/: Cargo.toml
program/clients/typescript/: package.json
program/clients/typescript/src/codecs/: merchantOperatorConfig.ts
program/clients/typescript/tests/devnet/: devnet.test.ts
program/clients/typescript/tests/integration/: clear-payment.test.ts  close-payment.test.ts  initialize-merchant-operator.test.ts  intialize-merchant.test.ts  intialize-operator.test.ts  local-validator.test.ts  make-payment.test.ts  refund-payment.test.ts  update-merchant-authority.test.ts  update-merchant-settlement-wallet.test.ts  update-operator-authority.test.ts
program/clients/typescript/tests/integration/helpers/: assertions.ts  state-utils.ts  tokens.ts  transactions.ts
program/clients/typescript/tests/setup/: mocks.ts  test-with-validator.js
program/clients/typescript/tests/unit/accounts/: merchant.test.ts  (+3 more)
program/docs/: OPERATIONS.md  PROGRAM_OVERVIEW.md
program/docs/guides/: guide.md  sample-code.ts
program/idl/: commerce_program.json
program/kora/: README.md  test-kora-integration.sh  test-kora.toml
program/kora/docker/: entrypoint.sh
program/kora/keys/: kora-operator.json
program/kora/src/: index.ts
program/program/: Cargo.toml
program/program/src/: constants.rs  instructions.rs  lib.rs
program/scripts/: generate-client.ts
program/scripts/lib/: commerce-codama-builder.ts  constants.ts  pda-helpers.ts
program/scripts/lib/updates/: append-account-discriminator.ts  append-mo-config-remaining-accounts.ts  append-pda-derivers.ts  set-default-account-values.ts  set-instruction-account-default-values.ts
program/tests/integration-tests/: Cargo.toml
program/tests/integration-tests/src/: assertions.rs  clear_payment_tests.rs  close_payment_tests.rs  make_payment_tests.rs  merchant_operator_config_tests.rs  merchant_test.rs  operator_tests.rs  refund_payment_tests.rs  state_utils.rs  utils.rs
program/tests/setup/mints/: usdt.json
program/trezoakora/: README.md  package-lock.json  package.json  test-trezoakora-integration.sh  test-trezoakora.toml
program/trezoakora/docker/: Dockerfile.simple  entrypoint.sh
program/trezoakora/keys/: commerce-merchant.json  test-mint.json
program/trezoakora/src/: index.ts  trezoakora-utils.ts  utils.ts
(+39 files in other folders)
