[workspace]

members = ["program", "clients/rust", "tests/integration-tests"]

resolver = "2"

package.version = "0.0.1"
package.edition = "2021"

[workspace.dependencies]
const-crypto = "=0.3.0"
pinocchio = "=0.9.2"
pinocchio-associated-token-account = "=0.2.0"
pinocchio-log = "=0.5.0"
pinocchio-pubkey = "=0.3.0"
pinocchio-system = "=0.3.0"
pinocchio-token = "=0.4.0"
pinocchio-token-2022 = "=0.1.0"
shank = "=0.4.3"
commerce-program-client = { path = "clients/rust", features = ["fetch"] }
tokio = "=1.47.0"
borsh = "=1.5.7"
trezoa-program = "=3.2.2"
trezoa-sdk = "=2.2.2"
trezoa-account-info = "=3.2.2"
trezoa-pubkey = "=3.2.2"
trezoa-program-entrypoint = "=2.2.2"
trezoa-instruction = "=3.2.2"
trezoa-cpi = "=3.2.2"
num-derive = "=0.4"
num-traits = "=0.2"
tpl-token = "8.0.0"
tpl-associated-token-account = "7.0.0"
trezoa-client = "=3.2.1"
trezoa-account = "=3.2.2"
trezoa-program-pack = "3.2.1"
thiserror = { version = "2.0.14", default-features = false }
trezoa-program-error = "~3.2.2"
