[package]
name = "commerce-program-client"
version = "0.0.1"
edition = "2021"
description = "Rust client for the Commerce Program"
license = "MIT"
repository = "https://github.com/trezoa-commerce/commerce-program"

[dependencies]
borsh = { workspace = true }
trezoa-program = { workspace = true }
trezoa-account-info = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-program-entrypoint = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-cpi = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

trezoa-client = { workspace = true, optional = true }
trezoa-account = { workspace = true, optional = true }
trezoa-program-error = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
fetch = ["trezoa-client", "trezoa-account"]
