[package]
name = "tests-commerce-program"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
litesvm = "=0.6.1"
commerce-program-client = { workspace = true, features = ["fetch"] }
tokio = { workspace = true, features = ["full"] }
borsh = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-program = { workspace = true }
tpl-token = { workspace = true }
tpl-associated-token-account = { workspace = true }
trezoa-program-pack = { workspace = true }
